welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
	if (getCouleurSol){
            ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
    recule
    ^