welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	avance 
	if (getCouleurSol){
	return true
	}else{
		return false 
	}
    recule
}        
